--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,9 @@
+md-content.frame {
+  height: calc(100vh - 49px);
+}
 
-md-content {
-  height: calc(100vh - 64px);
+md-content.columna {
+  height: calc(100vh);
 }
 
 footer {
@@ -10,4 +13,31 @@ footer {
 
 main {
   overflow-y: auto;
+}
+
+i.material-icons {
+  cursor:pointer;
+}
+
+md-card.todas {
+  height: 380px;
+  width: 260px;
+}
+
+div.iconos {
+  padding-top: 70px;
+}
+
+i.nav {
+  padding-top: 12px;
+  padding-left: 10px;
+}
+
+span.fav {
+  height: 40px;
+  width: 50px;
+}
+
+div.logo {
+  background-color: darkred;
 }
