--- a/website/angularjs/controller/auth/buscador/buscador.jade
+++ b/website/angularjs/controller/auth/buscador/buscador.jade
@@ -1,5 +1,7 @@
 p BUSCADOR
 
+p {{ blc.vacio }}
+
 div(layout="row")
     md-content.md-padding(layout-xs='column', layout='row')
         md-list(layout="row" layout-wrap)
