--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -5,6 +5,7 @@ div(layout="row")
     md-content.md-padding(layout-xs='column', layout='row')
         md-list(layout="row" layout-wrap)
             md-list-item(ng-repeat="lista in mlc.listas track by $index")
+                md-button(ng-click="mlc.edit(lista)") EDITAR
                 md-card(flex class="todas")
                     div(layout="row")
                         div(layout="column" flex=90)
@@ -20,20 +21,19 @@ div(layout="row")
 
                             //md-card-actions(layout='row', layout-align='start center')
                             //    md-card-icon-actions
-                            p Por: {{ lista.nombreUsuario }}
                             div(ng-repeat="tag in lista.tags")
                                 span Genero: {{ tag }}
 
-                            p Nº Favoritos: {{ lista.numfavoritos }}
-                        div(layout="column" flex=10 class="iconos")
-                            i.material-icons(ng-click="nct.play(lista.info)") play_arrow
-                            div(ng-if="lista.usuarioid != lista.miusuarioid")
-                                div(ng-if="lista.isfavorited == false")
-                                    //md-button(ng-click="nct.favorito(lista.listaid)") Favorito
-                                    i.material-icons(ng-click="nct.favorito(lista.listaid)") favorite_border
-                                div(ng-if="lista.isfavorited == true")
-                                    //md-button(ng-click="nct.nofavorito(lista.listaid)") NO Favorito
-                                    i.material-icons(ng-click="nct.nofavorito(lista.listaid)") favorite
+                            //p Nº Favoritos: {{ lista.numfavoritos }}
+                        //div(layout="column" flex=10 class="iconos")
+                        //    i.material-icons(ng-click="nct.play(lista.info)") play_arrow
+                        //    div(ng-if="lista.usuarioid != lista.miusuarioid")
+                        //        div(ng-if="lista.isfavorited == false")
+                        //            //md-button(ng-click="nct.favorito(lista.listaid)") Favorito
+                        //            i.material-icons(ng-click="nct.favorito(lista.listaid)") favorite_border
+                        //        div(ng-if="lista.isfavorited == true")
+                        //            //md-button(ng-click="nct.nofavorito(lista.listaid)") NO Favorito
+                        //            i.material-icons(ng-click="nct.nofavorito(lista.listaid)") favorite
 
 
                 //md-card-content
