--- a/website/angularjs/controller/auth/nuevos/nuevos.jade
+++ b/website/angularjs/controller/auth/nuevos/nuevos.jade
@@ -2,13 +2,12 @@
 p NUEVOS
 
 div(layout="row")
-    md-content(layout-xs='column' layout='row' style="padding-right: 15%" )
+    md-content(layout-xs='column' layout='row' style="padding-right: 20%" )
         md-list(layout="row" layout-wrap layout-align="center")
             md-list-item(ng-repeat="lista in nct.nuevos track by $index")
                 md-card(flex=33 class="todas")
                         div(layout="column")
-
-                            md-card-title
+                            md-card-title(ng-click="nct.verLista(lista)" style="cursor:pointer")
                                 md-card-title-text
                                     span.md-headline(flex md-truncate) {{ lista.nombre }}
                             div(layout= "row")
@@ -26,8 +25,9 @@ div(layout="row")
 
                             p Nº Favoritos: {{ lista.numfavoritos }}
                             div
-                                md-button(ng-click="nct.play(lista.info)")
+                                md-button(ng-click="nct.play(lista.info); nct.reproduccion(lista.listaid)")
                                     i.material-icons() play_arrow
+                                    span {{ lista.numreproducciones }}
                                     span(flex=100)
                                 span(ng-if="lista.usuarioid != lista.miusuarioid" class="fav")
                                     span(ng-if="lista.isfavorited == false")
