--- a/website/angularjs/controller/auth/frame/frame.jade
+++ b/website/angularjs/controller/auth/frame/frame.jade
@@ -13,30 +13,32 @@ div(layout="column" layout-fill)
                 span(flex style="background-color: gray") NUBE DE TAGS O ALGO
 
                 div(ng-show="fc.youtube")
-                    youtube-video(video-url="fc.idVideo" player-vars="fc.playerVars" player-width="'100%'" player-height="'1px'" player="player")
+                    youtube-video(video-url="fc.idVideo" player-vars="fc.playerVars" player-width="'100%'" player-height="'50px'" player="player")
         div(flex=85)
             div(ng-show="!fc.abrirBusqueda")
                 md-nav-bar(flex, nav-bar-aria-label="navigation links", md-selected-nav-item="actualNavItem")
                     md-nav-item(md-nav-sref="main.home")
                         i.material-icons.md-48 home
-                    md-nav-item(md-nav-sref="main.nuevos") Nuevas
+                    md-nav-item(md-nav-sref="main.nuevos({pagina: 1})") Nuevas
                     md-nav-item(md-nav-sref="main.populares") Populares
                     md-nav-item(md-nav-sref="main.recomendaciones") Recomendaciones
-                    md-nav-item(md-nav-sref="main.mislistas") Mis listas
                     md-nav-item(md-nav-sref="main.favoritos") Mis Favoritos
                     div(flex)
                     //md-nav-item(md-nav-sref="#")
 
                     i.material-icons.md-48(ng-click="fc.showAdvanced()" class="nav") playlist_add
                     i.material-icons.md-48(ng-click="fc.abrirBuscar()" class="nav") search
+                    md-nav-item(md-nav-sref="main.perfil") Perfil
                     md-nav-item(md-nav-sref="main.logout") Cerrar sesion
             div(ng-show="fc.abrirBusqueda")
                 md-nav-bar
-                    md-input-container(flex='80')
-                        label Buscador
-                        input(type='text' autofocus ng-model='fc.busqueda' )
-                    i.material-icons(ng-click="fc.buscar()" class="nav" flex='5') search
-                    i.material-icons(ng-click="fc.cerrarBuscar()" class="nav" flex='5') clear
+                    form(flex='80')
+                        md-input-container
+                            label Buscador
+                            input(type='text' autofocus ng-model='fc.busqueda' )
+                        md-button
+                            i.material-icons(type="submit" ng-click="fc.buscar()" class="nav" flex='5') search
+                        i.material-icons(ng-click="fc.cerrarBuscar()" class="nav" flex='5') clear
                     md-select(ng-model='fc.type' layout-align="center start" flex='10')
                         md-option(value='lista' selected) Listas
                         md-option(value='artista') Artista
