--- a/website/views/layout.jade
+++ b/website/views/layout.jade
@@ -9,8 +9,8 @@ html(ng-app="proyecto")
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/icon?family=Material+Icons')
-
-
+    link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
+    meta(name="viewport" content="width=device-width")
     base(href="/")
   body(ng-cloak layout="column" layout-fill)
     //div(flex layout="row")
@@ -26,12 +26,13 @@ html(ng-app="proyecto")
   script(src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js")
   script(src="https://cdn.jsdelivr.net/sweetalert2/6.5.4/sweetalert2.min.js")
   script(src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js")
-
-
+  script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
   script(src="https://www.youtube.com/iframe_api")
   script(src="/angular-youtube-mb/dist/angular-youtube-embed.min.js")
   script(src="/ng-lodash/build/ng-lodash.min.js")
   script(src="https://cdn.jsdelivr.net/angular.youtube-embed/1.7.10/ng-youtube-embed.min.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js")
 
 
   script(src="/dist/app.min.js")
+
