--- a/website/angularjs/controller/auth/mislistas/mislistas.jade
+++ b/website/angularjs/controller/auth/mislistas/mislistas.jade
@@ -19,8 +19,8 @@ div(layout="row")
 
     div(flex=20)
 
-md-tabs(md-dynamic-height md-border-bottom md-center-tabs)
-    md-tab(label="Mis listas" )
+md-tabs(md-dynamic-height md-border-bottom md-center-tabs )
+    md-tab(label="Mis listas" md-active="mlc.tab1")
 
         md-list(style="padding-left:10%" flex)
 
@@ -55,7 +55,8 @@ md-tabs(md-dynamic-height md-border-bottom md-center-tabs)
                         md-button(ng-click="mlc.eliminar(lista.idlista)") Eliminar
 
                 md-divider
-    md-tab(label="Favoritos" )
+        ul(uib-pagination, total-items='mlc.listas[0].totalListas', items-per-page='9' ng-model='mlc.paginaActual', ng-change='mlc.siguiente(1,mlc.paginaActual)')
+    md-tab(label="Favoritos" md-active="mlc.tab2")
 
         md-list(style="padding-left:10%" flex)
 
@@ -85,6 +86,7 @@ md-tabs(md-dynamic-height md-border-bottom md-center-tabs)
 
 
                 md-divider
+        ul(uib-pagination, total-items='mlc.favoritos[0].totalListas', items-per-page='9' ng-model='mlc.paginaActual2', ng-change='mlc.siguiente(2,mlc.paginaActual2)')
 
 
 
